Style/Style.css
* {
  margin: 0;
  padding: 0;
}

body{
  background-color: #F5F5F5;
}

h3 {
  color: #adbed8;
}

h4 {
  color: #adbed8;
}

a:link {
    text-decoration: none;
    color: #FFA500;
}

a:visited {
    text-decoration: none;
    color: #FFA500;
}

a:hover {
  font-weight: bolder;
  color: #FFA500;
}

a::after {
  display:block;
  font-weight: lighter;
  height:1px;
  color:transparent;
  overflow:hidden;
  visibility:hidden;
}

a:active {
    text-decoration: none;
}

Header {
  display: flex;
  flex-direction: column;
  box-shadow: 0 0 10px #000;
  margin: 15px;
  height: auto;
  background: url('../Images/motor.jpg') left;
  background-size: cover;
}

  .title {
    display: flex;
    justify-content: flex-end;
    margin-right: 10%;
    margin-top: 5px;
    font-family: 'Kalam', cursive;
    font-size: 0.8em;
    }

  .info {
    font-size: 1.5em;
    margin-left: 20%;
    margin-top: 10px;
    color: #f1ffef;
  }

  .skills-list {
    display: flex;
    flex-direction: column;
    align-items: flex-start;
    list-style: none;
    margin-left: 2%;
    margin-bottom: 10px;
    color: #f1ffef;
    cursor: default;
  }

    .list-item {
      font-size: inherit;
      color: #f1ffef;
    }

.container1 {
  display: flex;
  align-items: baseline;
  flex-direction: row;
  box-shadow: 0 0 10px #000;
  background-color: #f1ffef;
  margin: 15px;
  height: auto;
  font-family: sans-serif;
  font-size: 1.0em;
  text-align: justify;
  color: #00001a;
  background: url('../Images/about-lights.jpg') left;*/
}
  .about {
    height: auto;
    width: 30%;
    margin: 10px;
    padding: 10px;
  }

  .class-skills{
    height: auto;
    width: 30%;
    font-size: 1.0em;
    margin: 10px;
    padding: 10px;
  }

  .future-targets{
    height: auto;
    width: 30%;
    font-size: 1.0em;
    margin: 10px;
    padding: 10px;
  }

.container2 {
  display: flex;
  align-items: center;
  flex-direction: row;
  justify-content: space-around;
  box-shadow: 0 0 15px #000;
  background-color: #f1ffef;
  margin: 15px;
  height: auto;
  font-family: 'Roboto', sans-serif;
  font-size: 1.0em;
  color: #d9d9d9;
  text-shadow: 0 0 10px #000;
  background: url('../Images/background-woods.jpg') left;
  background-size: cover;
}

  .img-off-ikke {
    height: 150px;
    width: 150px;
    border-radius: 50%;
    margin-top: 50%
    cursor: grab;
  }

  .container-middle {
    height: auto;
    width: 25%;
    margin: 10px;
    padding: 10px;
  }

Footer {
  text-align: center;
  padding: 15px;
}

.contact-page-head {
  box-shadow: 0 0 10px #000;
  margin: 0px 15px 15px 15px;
  padding: 5px;
  height: auto;
  border-bottom-right-radius: 10px;
  border-bottom-left-radius: 10px;
  background-color: black;
}

  .logo-box {
    float: left;
    height: auto;
    width: 50%;
  }

  .text-box {
    float: right;
    width: 50%;
    text-align: left;
    color: white;
  }

  .input-box h3 {
    color: #4286f4;
  }

  .input-box {
    color: white;
    clear: both;
  }

#email {
  display: flex;
  visibility: hidden;
  opacity: 0;
  transition: visibility 0s, opacity 0.5s linear;
  flex-direction: row;
  box-shadow: 0 0 10px #000;
  padding: 5px;
  margin: 15px;
  height: auto;
  border-top-left-radius: 10px;
  border-top-right-radius: 10px;
  border-bottom-right-radius: 10px;
  border-bottom-left-radius: 10px;
}

@keyframes slidein {
  from {
    margin-left: 100%;
    width: 300%;
  }

  to {
    margin-left: 0%;
    width: 100%;
  }
}

  #show1 {
    animation-duration: 3s;
    animation-name: slidein;
    margin-left: 10px;
    color: blue;
    font-size: 50px;
    text-shadow: 0 0 2px #000;
  }

  #show2 {
    animation-duration: 3s;
    animation-name: slidein;
    color: red;
    font-size: 50px;
    text-shadow: 0 0 2px #000;
  }

  #show3 {
    animation-duration: 3s;
    animation-name: slidein;
    color: green;
    font-size: 50px;
    text-shadow: 0 0 2px #000;
  }

.contact-page-footer {
  position: absolute;
	bottom: 0px;
	left: 0px;
  text-align: center;
  margin: 15px 15px 15px 15px;
  padding: 5px;
  height: auto;
  width: 97%;
}

  .logo {
    border: 2px solid black;
    border-radius: 50%;
    text-align: center;
    padding: 2px;
    font-family: 'Permanent Marker', cursive;
  }

  .logo2 {
    clear: right;
    border: 2px solid white;
    height: auto;
    width: 30px;
    border-radius: 50%;
    text-align: center;
    padding: 2px;
    font-family: 'Permanent Marker', cursive;
    color: white;
  }

